<resources>
    <string name="app_name">SuperChero</string>
    <string name="title_activity_crear_cuenta">crear_cuenta</string>
    <string name="subtitulo_crear_cuenta">Llena tus datos y registrate :</string>
    <string name="correo_o_tel">Ingresa tu correo</string>
    <string name="nombre_completo">Ingresa tu nombre completo</string>
    <string name="nombre_usuario">Ingresa tu nuevo nombre de usuario</string>
    <string name="contrasenha">Ingresa tu contraseña nueva</string>
    <string name="o_crear_cuenta">- o registrate con-</string>
    <string name="enter">Enter</string>
    <string name="pagar">Pagar</string>
    <string name="para_ellas">Para ellas</string>
    <string name="pregunta_secciones">Que tipo de tienda buscas?</string>
    <string name="Deportivo">Deportivo</string>
    <string name="formal">Formal</string>
    <string name="de_diario">De diario</string>
    <string name="tropical">Tropical</string>
    <string name="para_dormir">Para dormir</string>
    <string name="ropa_interior">Ropa interior</string>
    <string name="mas_populares">Mas populares:</string>
    <string name="efectivoaldelivery">¿Cuánto le darás al delivery?</string>
    <string name="detalle_compra">Detalle de la compra</string>

    <string name="nombrfact">Nombre para la factura:</string>
    <string name="nom">Añade un nombre</string>
    <string name="nit">Añade un NIT</string>
    <string name="facturacarnet">Documento para la factura:</string>
    <string name="tu_num">Añade un número de teléfono:</string>
    <string name="telf">Número de contacto (+591):</string>
    <string name="donde">¿A dónde te lo llevamos?</string>
    <string name="tu_ubi">Descripción  de tu ubicación:</string>
    <string name="a_pagar">Monto a pagar (Bs.):</string>
    <string name="descripcion">Descripción: </string>
    <string name="tupedido">Tu pedido</string>
    <string name="ubicacion_titulo">Ubicación</string>
    <string name="realizado">Pedido realizado</string>
    <string name="gracias">¡Gracias por tu preferencia!</string>
    <string name="puntuar">¿Cómo puntuas la tienda?</string>
    <string name="omitir">Omitir</string>
    <string name="tarjetas">Tarjeta</string>
    <string name="banco">Banco</string>
    <string name="nombre">Nombre completo</string>
    <string name="num_tarjeta">Número de tarjeta</string>
    <string name="codigo_seguridad">Código de seguridad</string>
    <string name="comprobar">Comprobar</string>
    <string name="continuar_conel_pago">Continuar con el pago</string>
    <string name="listo">Enviar Calificación</string>
    <string name="cantidad">Cantidad</string>
    <string name="show">Show</string>
    <string name="titulo_ususario">Usuario:</string>
    <string name="titulo_email">Email:</string>
    <string name="prenda">Prenda</string>
    <string name="total_a_pagar">Total</string>
    <string name="detalles">Detalles</string>
    <string name="por_servicio">Comisión por servicio</string>
    <string name="comision">5 Bs.</string>


    <string name="olvido">¿Olvidaste tu contraseña?</string>
    <string name="o">-----------------o-----------------</string>
    <string name="crear">Crear Cuenta</string>
    <string name="man">Hombres</string>
    <string name="mujeres">Mujeres</string>
    <string name="ninos">Niñ@s</string>
    <string name="promos">PROMOCIONES</string>
    <string name="tendencias">TENDECIAS</string>
    <string name="favoritos">Mis Favoritos</string>
    <string name="info">Informacion</string>
    <string name="infotarjetas">Tarjetas Guardadas:</string>
    <string name="infofavoritos">Mis Favoritos</string>
    <string name="close">Cerrar Sesion</string>
    <string name="adquiere_el_tuyo">Adquiere el tuyo</string>

</resources>