<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/perla"
    tools:context=".PagoTarjetaActivity">

    <TextView
        android:id="@+id/titulo_tarjeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tarjetas"
        android:theme="@style/TextViewTitulos"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="48dp"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/ImageViewAtras"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        />

    <EditText
        android:id="@+id/banco"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:theme="@style/EditTextDatos"
        android:hint="@string/banco"
        app:layout_constraintTop_toBottomOf="@id/titulo_tarjeta"
        android:layout_marginTop="80dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
    />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:theme="@style/EditTextDatos"
        android:hint="@string/nombre"
        app:layout_constraintTop_toBottomOf="@id/banco"
        android:layout_marginTop="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
    />

    <EditText
        android:id="@+id/numtarjeta"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:theme="@style/EditTextDatos"
        android:hint="@string/num_tarjeta"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/nombre"
        android:layout_marginTop="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
    />

    <EditText
        android:id="@+id/codigo_seguridad"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:theme="@style/EditTextDatos"
        android:hint="@string/codigo_seguridad"
        app:layout_constraintTop_toBottomOf="@id/numtarjeta"
        android:layout_marginTop="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
    />

    <Button
        android:id="@+id/boton_comprobar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/BotonesFuncionales"
        android:text="@string/comprobar"
        app:layout_constraintTop_toBottomOf="@id/codigo_seguridad"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="64dp"
    />

    <Button
        android:id="@+id/boton_continuar_pago"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/BotonesFuncionales"
        android:text="@string/continuar_conel_pago"
        app:layout_constraintTop_toBottomOf="@id/boton_comprobar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="32dp"
    />

</androidx.constraintlayout.widget.ConstraintLayout>