<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".crearcuenta"
    android:background="@color/perla">

    <TextView
        android:id="@+id/subtitulo_crearcuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/subtitulo_crear_cuenta"
        android:theme="@style/TextViewSubTitulos"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
         />
    

    
    <EditText
        android:id="@+id/correoOnumTel_crear_cuenta"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:theme="@style/EditTextDatos"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitulo_crearcuenta"
        android:hint="@string/correo_o_tel"
        
        />

        <EditText
            android:id="@+id/nombreCompleto_usuario_crear_cuenta"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextDatos"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/correoOnumTel_crear_cuenta"
            android:hint="@string/correo_o_tel"

            />

    <EditText
        android:id="@+id/nombre_usuario_crear_cuenta"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:theme="@style/EditTextDatos"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreCompleto_usuario_crear_cuenta"
        android:hint="@string/nombre_completo"

        />

    <EditText
        android:id="@+id/contrasenha_crear_cuenta"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:theme="@style/EditTextDatos"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre_usuario_crear_cuenta"
        android:hint="@string/contrasenha"

        />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/o_crearcuenta"
          android:theme="@style/TextViewTextoNormal"
          android:text="@string/o_crear_cuenta"
          app:layout_constraintTop_toBottomOf="@+id/contrasenha_crear_cuenta"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          android:layout_marginTop="32dp"
          >

      </TextView>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/twitter"
        android:src="@drawable/twitter"
        app:layout_constraintTop_toBottomOf="@+id/o_crearcuenta"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"
        >

    </ImageView>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/facebook"
        android:src="@drawable/facebook_contorno"
        app:layout_constraintTop_toBottomOf="@+id/o_crearcuenta"
        app:layout_constraintLeft_toRightOf="@+id/twitter"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        >

    </ImageView>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/google_logo"
        android:src="@drawable/google_logo"
        app:layout_constraintTop_toBottomOf="@+id/o_crearcuenta"
        app:layout_constraintRight_toLeftOf="@+id/twitter"
        android:layout_marginRight="16dp"
        android:layout_marginTop="40dp"
        >

    </ImageView>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/BotonesFuncionales"
        app:layout_constraintTop_toBottomOf="@+id/twitter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="48dp"
        android:text="@string/enter"
        >

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>