<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/perla"
    tools:context=".CarritoActivity">

    <ImageView
        android:id="@+id/botonatras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/atras"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/titulo_tupedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tupedido"
        android:theme="@style/TextViewTitulos"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="48dp"
        />

<!--    <TextView-->
<!--        android:id="@+id/descripcion_carrito"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/descripcion"-->
<!--        android:theme="@style/TextViewSubTitulos"-->
<!--        app:layout_constraintTop_toBottomOf="@id/titulo_tupedido"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        android:layout_marginLeft="20dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        />-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_marginLeft="48dp"
        app:layout_constraintTop_toBottomOf="@id/titulo_tupedido"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="3"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:id="@+id/prenda_subtitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/prenda"
                android:theme="@style/TextViewSubTitulos"
                />

            <TextView
                android:id="@+id/prenda_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textSize="38dp"
                android:theme="@style/TextViewTextoNormal"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:id="@+id/sub_cantidad_prenda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="56dp"
                android:layout_weight="1"
                android:text="@string/cantidad"
                android:theme="@style/TextViewSubTitulos"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:weightSum="4">

                <ImageButton
                    android:id="@+id/basurero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/delete"
                    android:backgroundTint="@color/perla"/>

                <ImageButton
                    android:id="@+id/menos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/menosuno"
                    android:backgroundTint="@color/perla"/>

                <TextView
                    android:id="@+id/prenda_cant"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    android:text="0"
                    android:textSize="24dp"
                    android:layout_marginTop="4dp"
                    android:textAlignment="center"
                    />

                <ImageButton
                    android:id="@+id/mas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/menosuno"
                    android:backgroundTint="@color/perla"/>

            </LinearLayout>




        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>